# mem

./: .gitignore  Cargo.toml  README.md  design.md  features.md  plan.md
design/: deps.md  design.md
src/: app.rs  command.rs  common.rs  config.rs  doc.rs  docs.rs  index.rs  lib.rs  link.rs  list.rs  main.rs  memo.rs  memos.rs  search.rs  utils.rs
src/doc/: card.rs  descriptor.rs  note.rs  read.rs  todo.rs
src/index/: docs.rs  index_op.rs  lists.rs
src/list/: descriptor.rs
src/parsing/: mod.rs
