[package]
name = "mem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version = "0.4.19", features = ["serde"], optional = true}
hex = "0.4.3"
inquire = "0.2.1"
rand = "0.8.4"
serde = {version = "1.0.130", features = ["derive"]}
serde_json = "1.0.72"

[features]
default = ["time"]
time = ["chrono"]