[package]
name = "mem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version = "0.4.19", features = ["serde"], optional = true}
hex = "0.4.3"
inquire = {path = "../inquire"}
crossterm = "0.24"
rand = "0.8.5"
serde = {version = "1.0.141", features = ["derive"]}
serde_json = "1.0.82"

[features]
default = ["time"]
time = ["chrono"]