[package]
name = "mem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version = "0.4.19", features = ["serde"], optional = true}
crossterm = "0.25"

color-eyre = "0.6"

hex = "0.4.3"

dirs = "4"
toml = "0.5"
serde = {version = "1.0.141", features = ["derive"]}
serde_json = "1.0.82"
strum = { version = "0.24", features = ["derive"] }

[features]
default = ["time"]
time = ["chrono"]